@@ -3,7 +3,7 @@
  *
  * What you see below is very much work-in-progress. The following features are implemented:
  *   - Compiling all classses for the compiler and library ("compile" in the respective subprojects)
- *   - Running JUnit tests ("test") and partest ("test/it:test")
+ *   - Running JUnit ("junit/test"), ScalaCheck ("scalacheck/test"), and partest ("test/it:test") tests
  *   - Creating build/quick with all compiled classes and launcher scripts ("dist/mkQuick")
  *   - Creating build/pack with all JARs and launcher scripts ("dist/mkPack")
  *   - Building all scaladoc sets ("doc")
@@ -17,65 +17,50 @@
  * This nicely leads me to explaining goal and non-goals of this build definition. Goals are:
  *
  *   - to be easy to tweak it in case a bug or small inconsistency is found
- *   - to mimic Ant's behavior as closely as possible
  *   - to be super explicit about any departure from standard sbt settings
- *   - to achieve functional parity with Ant build as quickly as possible
  *   - to be readable and not necessarily succinct
  *   - to provide the nicest development experience for people hacking on Scala
+ *   - originally, to mimic Ant's behavior as closely as possible, so the
+ *     sbt and Ant builds could be maintained in parallel. the Ant build
+ *     has now been removed, so we are now free to depart from that history.
  *
  * Non-goals are:
  *
- *   - to have the shortest sbt build definition possible; we'll beat Ant definition
- *     easily and that will thrill us already
+ *   - to have the shortest sbt build definition possible
  *   - to remove irregularities from our build process right away
+ *     (but let's keep making gradual progress on this)
  *   - to modularize the Scala compiler or library further
- *
- * It boils down to simple rules:
- *
- *   - project layout is set in stone for now
- *   - if you need to work on convincing sbt to follow non-standard layout then
- *     explain everything you did in comments
- *   - constantly check where Ant build produces class files, artifacts, what kind of other
- *     files generates and port all of that to here
- *
- * Note on bootstrapping:
- *
- *   Let's start with reminder what bootstrapping means in our context. It's an answer
- *   to this question: which version of Scala are using to compile Scala? The fact that
- *   the question sounds circular suggests trickiness. Indeed, bootstrapping Scala
- *   compiler is a tricky process.
- *
- *   Ant build used to have involved system of bootstrapping Scala. It would consist of
- *   three layers: starr, locker and quick. The sbt build for Scala ditches layering
- *   and strives to be as standard sbt project as possible. This means that we are simply
- *   building Scala with latest stable release of Scala.
- *   See this discussion for more details behind this decision:
- *     https://groups.google.com/d/topic/scala-internals/gp5JsM1E0Fo/discussion
  */
 
-import VersionUtil._
+import scala.build._, VersionUtil._
 
-val bootstrapScalaVersion = versionProps("starr.version")
+// Scala dependencies:
+val scalaSwingDep                = scalaDep("org.scala-lang.modules", "scala-swing")
+val scalaXmlDep                  = scalaDep("org.scala-lang.modules", "scala-xml")
+val scalaParserCombinatorsDep    = scalaDep("org.scala-lang.modules", "scala-parser-combinators")
 
-def withoutScalaLang(moduleId: ModuleID): ModuleID = moduleId exclude("org.scala-lang", "*")
+// Non-Scala dependencies:
+val junitDep          = "junit"                          % "junit"           % "4.12"
+val junitInterfaceDep = "com.novocode"                   % "junit-interface" % "0.11"                            % Test
+val scalacheckDep     = "org.scalacheck"                %% "scalacheck"      % "1.14.3"                          % Test
+val jolDep            = "org.openjdk.jol"                % "jol-core"        % "0.13"
+val asmDep            = "org.scala-lang.modules"         % "scala-asm"       % versionProps("scala-asm.version")
+val jlineDep          = "jline"                          % "jline"           % versionProps("jline.version")
+val jansiDep          = "org.fusesource.jansi"           % "jansi"           % "1.12"
+val antDep            = "org.apache.ant"                 % "ant"             % "1.9.4"
+val testInterfaceDep  = "org.scala-sbt"                  % "test-interface"  % "1.0"
+val diffUtilsDep      = "com.googlecode.java-diff-utils" % "diffutils"       % "1.3.0"
 
-// exclusion of the scala-library transitive dependency avoids eviction warnings during `update`.
-val scalaParserCombinatorsDep = withoutScalaLang("org.scala-lang.modules" %% "scala-parser-combinators" % versionNumber("scala-parser-combinators"))
-val scalaSwingDep = withoutScalaLang("org.scala-lang.modules" %% "scala-swing" % versionNumber("scala-swing"))
-val scalaXmlDep = withoutScalaLang("org.scala-lang.modules" %% "scala-xml" % versionNumber("scala-xml"))
-val partestDep = withoutScalaLang("org.scala-lang.modules" %% "scala-partest" % versionNumber("partest"))
-val junitDep = "junit" % "junit" % "4.11"
-val junitIntefaceDep = "com.novocode" % "junit-interface" % "0.11" % "test"
-val jolDep = "org.openjdk.jol" % "jol-core" % "0.5"
-val asmDep = "org.scala-lang.modules" % "scala-asm" % versionProps("scala-asm.version")
-val jlineDep = "jline" % "jline" % versionProps("jline.version")
-val antDep = "org.apache.ant" % "ant" % "1.9.4"
-val scalacheckDep = withoutScalaLang("org.scalacheck" %% "scalacheck" % versionNumber("scalacheck") % "it")
-
-/** Publish to ./dists/maven-sbt, similar to the ANT build which publishes to ./dists/maven. This
-  * can be used to compare the output of the sbt and ANT builds during the transition period. Any
+/** Publish to ./dists/maven-sbt, similar to the Ant build which publishes to ./dists/maven. This
+  * can be used to compare the output of the sbt and Ant builds during the transition period. Any
   * real publishing should be done with sbt's standard `publish` task. */
 lazy val publishDists = taskKey[Unit]("Publish to ./dists/maven-sbt.")
+
+credentials in Global ++= {
+  val file = Path.userHome / ".credentials"
+  if (file.exists && !file.isDirectory) List(Credentials(file))
+  else Nil
+}
 
 lazy val publishSettings : Seq[Setting[_]] = Seq(
   publishDists := {
@@ -97,48 +82,76 @@ lazy val publishSettings : Seq[Setting[_]] = Seq(
   },
   credentials ++= {
     val file = Path.userHome / ".credentials"
-    if (file.exists) List(Credentials(file))
+    if (file.exists && !file.isDirectory) List(Credentials(file))
     else Nil
   },
   // Add a "default" Ivy configuration because sbt expects the Scala distribution to have one:
-  ivyConfigurations += Configuration("default", "Default", true, List(Configurations.Runtime), true),
+  ivyConfigurations += Configuration.of("Default", "default", "Default", true, Vector(Configurations.Runtime), true),
   publishMavenStyle := true
 )
 
-// Set the version number: The ANT build uses the file "build.number" to get the base version. Overriding versions or
-// suffixes for certain builds is done by directly setting variables from the shell scripts. For example, in
-// publish-core this requires computing the commit SHA first and then passing it to ANT. In the sbt build we use
-// the two settings `baseVersion` and `baseVersionSuffix` to compute all versions (canonical, Maven, OSGi). See
-// VersionUtil.versionPropertiesImpl for details. The standard sbt `version` setting should not be set directly. It
-// is the same as the Maven version and derived automatically from `baseVersion` and `baseVersionSuffix`.
+// Set the version number: We use the two settings `baseVersion` and `baseVersionSuffix` to compute all versions
+// (canonical, Maven, OSGi). See VersionUtil.versionPropertiesImpl for details. The standard sbt `version` setting
+// should not be set directly. It is the same as the Maven version and derived automatically from `baseVersion` and
+// `baseVersionSuffix`.
 globalVersionSettings
-baseVersion in Global := "2.12.0"
+baseVersion in Global       := "2.12.15"
 baseVersionSuffix in Global := "SNAPSHOT"
+organization in ThisBuild   := "org.scala-lang"
+homepage in ThisBuild       := Some(url("https://www.scala-lang.org"))
+startYear in ThisBuild      := Some(2002)
+licenses in ThisBuild       += (("Apache-2.0", url("https://www.apache.org/licenses/LICENSE-2.0")))
+headerLicense in ThisBuild  := Some(HeaderLicense.Custom(
+  s"""Scala (${(homepage in ThisBuild).value.get})
+     |
+     |Copyright EPFL and Lightbend, Inc.
+     |
+     |Licensed under Apache License 2.0
+     |(http://www.apache.org/licenses/LICENSE-2.0).
+     |
+     |See the NOTICE file distributed with this work for
+     |additional information regarding copyright ownership.
+     |""".stripMargin
+))
 
-lazy val commonSettings = clearSourceAndResourceDirectories ++ publishSettings ++ Seq[Setting[_]](
-  organization := "org.scala-lang",
-  scalaVersion := bootstrapScalaVersion,
+scalaVersion in Global         := versionProps("starr.version")
+
+lazy val instanceSettings = Seq[Setting[_]](
   // we don't cross build Scala itself
   crossPaths := false,
   // do not add Scala library jar as a dependency automatically
   autoScalaLibrary := false,
-  // we also do not add scala instance automatically because it introduces
-  // a circular instance, see: https://github.com/sbt/sbt/issues/1872
+  // Avoid circular dependencies for scalaInstance (see https://github.com/sbt/sbt/issues/1872)
   managedScalaInstance := false,
-  // this is a way to workaround issue described in https://github.com/sbt/sbt/issues/1872
-  // check it out for more details
-  scalaInstance := ScalaInstance(scalaVersion.value, appConfiguration.value.provider.scalaProvider.launcher getScala scalaVersion.value),
+  scalaInstance := {
+    val s = (scalaInstance in bootstrap).value
+    // sbt claims that s.isManagedVersion is false even though s was resolved by Ivy
+    // We create a managed copy to prevent sbt from putting it on the classpath where we don't want it
+    if(s.isManagedVersion) s else {
+      import sbt.internal.inc.ScalaInstance
+      val s2 = new ScalaInstance(s.version, s.loader, s.loaderLibraryOnly, s.libraryJars, s.compilerJar, s.allJars, Some(s.actualVersion))
+      assert(s2.isManagedVersion)
+      s2
+    }
+  },
+  // sbt endeavours to align both scalaOrganization and scalaVersion
+  // in the Scala artefacts, for example scala-library and scala-compiler.
+  // This doesn't work in the scala/scala build because the version of scala-library and the scalaVersion of
+  // scala-library are correct to be different. So disable overriding.
+  scalaModuleInfo ~= (_ map (_ withOverrideScalaVersion false)),
+  Quiet.silenceScalaBinaryVersionWarning
+)
+
+lazy val commonSettings = instanceSettings ++ clearSourceAndResourceDirectories ++ publishSettings ++ Seq[Setting[_]](
   // we always assume that Java classes are standalone and do not have any dependency
   // on Scala classes
   compileOrder := CompileOrder.JavaThenScala,
-  javacOptions in Compile ++= Seq("-g", "-source", "1.8", "-target", "1.8"),
-  // we don't want any unmanaged jars; as a reminder: unmanaged jar is a jar stored
-  // directly on the file system and it's not resolved through Ivy
-  // Ant's build stored unmanaged jars in `lib/` directory
-  unmanagedJars in Compile := Seq.empty,
+  javacOptions in Compile ++= Seq("-g", "-source", "1.8", "-target", "1.8", "-Xlint:unchecked"),
+  unmanagedJars in Compile := Seq.empty,  // no JARs in version control!
   sourceDirectory in Compile := baseDirectory.value,
   unmanagedSourceDirectories in Compile := List(baseDirectory.value),
   unmanagedResourceDirectories in Compile += (baseDirectory in ThisBuild).value / "src" / thisProject.value.id,
+  sourcesInBase := false,
   scalaSource in Compile := (sourceDirectory in Compile).value,
   javaSource in Compile := (sourceDirectory in Compile).value,
   // resources are stored along source files in our current layout
@@ -148,11 +161,13 @@ lazy val commonSettings = clearSourceAndResourceDirectories ++ publishSettings +
   target := (baseDirectory in ThisBuild).value / "target" / thisProject.value.id,
   classDirectory in Compile := buildDirectory.value / "quick/classes" / thisProject.value.id,
   target in Compile in doc := buildDirectory.value / "scaladoc" / thisProject.value.id,
-  // given that classDirectory and doc target are overriden to be _outside_ of target directory, we have
+  // given that classDirectory and doc target are overridden to be _outside_ of target directory, we have
   // to make sure they are being cleaned properly
   cleanFiles += (classDirectory in Compile).value,
   cleanFiles += (target in Compile in doc).value,
   fork in run := true,
+  connectInput in run := true,
+  scalacOptions in Compile += "-Ywarn-unused:imports",
   scalacOptions in Compile in doc ++= Seq(
     "-doc-footer", "epfl",
     "-diagrams",
@@ -161,61 +176,49 @@ lazy val commonSettings = clearSourceAndResourceDirectories ++ publishSettings +
     "-doc-version", versionProperties.value.canonicalVersion,
     "-doc-title", description.value,
     "-sourcepath", (baseDirectory in ThisBuild).value.toString,
-    "-doc-source-url", s"https://github.com/scala/scala/tree/${versionProperties.value.githubTree}€{FILE_PATH}.scala#L1"
+    "-doc-source-url", s"https://github.com/scala/scala/tree/${versionProperties.value.githubTree}€{FILE_PATH_EXT}#L€{FILE_LINE}"
   ),
-  homepage := Some(url("http://www.scala-lang.org")),
-  startYear := Some(2002),
-  licenses += ("BSD 3-Clause", url("http://www.scala-lang.org/license.html")),
-  apiURL := Some(url("http://www.scala-lang.org/api/" + versionProperties.value.mavenVersion + "/")),
+  setIncOptions,
+  apiURL := Some(url("https://www.scala-lang.org/api/" + versionProperties.value.mavenVersion + "/")),
   pomIncludeRepository := { _ => false },
   pomExtra := {
-    val base =
-      <scm>
-        <connection>scm:git:git://github.com/scala/scala.git</connection>
-        <url>https://github.com/scala/scala.git</url>
-      </scm>
-        <issueManagement>
-          <system>JIRA</system>
-          <url>https://issues.scala-lang.org/</url>
-        </issueManagement>
-        <developers>
-          <developer>
-            <id>lamp</id>
-            <name>EPFL LAMP</name>
-          </developer>
-          <developer>
-            <id>Lightbend</id>
-            <name>Lightbend, Inc.</name>
-          </developer>
-        </developers>
-    apiURL.value match {
-      case Some(url) => base ++
-        <properties>
-          <info.apiURL>{url.toString}</info.apiURL>
-        </properties>
-      case None => base
-    }
+    <scm>
+      <connection>scm:git:git://github.com/scala/scala.git</connection>
+      <url>https://github.com/scala/scala.git</url>
+    </scm>
+      <issueManagement>
+        <system>GitHub</system>
+        <url>https://github.com/scala/bug/issues</url>
+      </issueManagement>
+      <developers>
+        <developer>
+          <id>lamp</id>
+          <name>LAMP/EPFL</name>
+        </developer>
+        <developer>
+          <id>Lightbend</id>
+          <name>Lightbend, Inc.</name>
+        </developer>
+      </developers>
   },
+  headerLicense := (headerLicense in ThisBuild).value,
   // Remove auto-generated manifest attributes
   packageOptions in Compile in packageBin := Seq.empty,
   packageOptions in Compile in packageSrc := Seq.empty,
 
   // Lets us CTRL-C partest without exiting SBT entirely
   cancelable in Global := true,
-  // When we fork subprocesses, use the base directory as the working directory.
-  // This enables `sbt> partest test/files/run/t1.scala` or `sbt> scalac sandbox/test.scala`
-  baseDirectory in Compile := (baseDirectory in ThisBuild).value,
-  baseDirectory in Test := (baseDirectory in ThisBuild).value,
+
+  // Don't pick up source files from the project root.
+  sourcesInBase := false,
 
   // Don't log process output (e.g. of forked `compiler/runMain ...Main`), just pass it
   // directly to stdout
-  outputStrategy in run := Some(StdoutOutput),
-  Quiet.silenceScalaBinaryVersionWarning,
-  Quiet.silenceIvyUpdateInfoLogging
-)
+  outputStrategy in run := Some(StdoutOutput)
+) ++ removePomDependencies ++ setForkedWorkingDirectory
 
 /** Extra post-processing for the published POM files. These are needed to create POMs that
-  * are equivalent to the ones from the ANT build. In the long term this should be removed and
+  * are equivalent to the ones from the Ant build. In the long term this should be removed and
   * POMs, scaladocs, OSGi manifests, etc. should all use the same metadata. */
 def fixPom(extra: (String, scala.xml.Node)*): Setting[_] = {
   /** Find elements in an XML document by a simple XPath and replace them */
@@ -235,19 +238,25 @@ def fixPom(extra: (String, scala.xml.Node)*): Setting[_] = {
     "/project/organization" ->
       <organization>
         <name>LAMP/EPFL</name>
-        <url>http://lamp.epfl.ch/</url>
+        <url>https://lamp.epfl.ch/</url>
       </organization>,
-    "/project/url" -> <url>http://www.scala-lang.org/</url>
+    "/project/url" -> <url>https://www.scala-lang.org/</url>
   ) ++ extra) }
 }
 
+val pomDependencyExclusions =
+  settingKey[Seq[(String, String)]]("List of (groupId, artifactId) pairs to exclude from the POM and ivy.xml")
+
+pomDependencyExclusions in Global := Nil
+
 /** Remove unwanted dependencies from the POM and ivy.xml. */
-def removePomDependencies(deps: (String, String)*): Seq[Setting[_]] = Seq(
+lazy val removePomDependencies: Seq[Setting[_]] = Seq(
   pomPostProcess := { n =>
     val n2 = pomPostProcess.value.apply(n)
+    val deps = pomDependencyExclusions.value
     import scala.xml._
     import scala.xml.transform._
-    (new RuleTransformer(new RewriteRule {
+    new RuleTransformer(new RewriteRule {
       override def transform(node: Node) = node match {
         case e: Elem if e.label == "dependency" &&
             deps.exists { case (g, a) =>
@@ -256,13 +265,14 @@ def removePomDependencies(deps: (String, String)*): Seq[Setting[_]] = Seq(
             } => Seq.empty
         case n => Seq(n)
       }
-    })).transform(Seq(n2)).head
+    }).transform(Seq(n2)).head
   },
   deliverLocal := {
     import scala.xml._
     import scala.xml.transform._
     val f = deliverLocal.value
-    val e = (new RuleTransformer(new RewriteRule {
+    val deps = pomDependencyExclusions.value
+    val e = new RuleTransformer(new RewriteRule {
       override def transform(node: Node) = node match {
         case e: Elem if e.label == "dependency" && {
           val org = e.attribute("org").getOrElse("").toString
@@ -273,7 +283,7 @@ def removePomDependencies(deps: (String, String)*): Seq[Setting[_]] = Seq(
         } => Seq.empty
         case n => Seq(n)
       }
-    })).transform(Seq(XML.loadFile(f))).head
+    }).transform(Seq(XML.loadFile(f))).head
     XML.save(f.getAbsolutePath, e, xmlDecl = true)
     f
   }
@@ -288,7 +298,8 @@ val disablePublishing = Seq[Setting[_]](
   publishArtifact := false,
   // The above is enough for Maven repos but it doesn't prevent publishing of ivy.xml files
   publish := {},
-  publishLocal := {}
+  publishLocal := {},
+  whitesourceIgnore := true
 )
 
 lazy val setJarLocation: Setting[_] =
@@ -306,16 +317,14 @@ lazy val setJarLocation: Setting[_] =
 lazy val scalaSubprojectSettings: Seq[Setting[_]] = commonSettings :+ setJarLocation
 
 def filterDocSources(ff: FileFilter): Seq[Setting[_]] = Seq(
-  sources in (Compile, doc) ~= (_.filter(ff.accept _)),
+  sources in (Compile, doc) ~= (_.filter(ff.accept)),
   // Excluded sources may still be referenced by the included sources, so we add the compiler
   // output to the scaladoc classpath to resolve them. For the `library` project this is
   // always required because otherwise the compiler cannot even initialize Definitions without
   // binaries of the library on the classpath. Specifically, we get this error:
   // (library/compile:doc) scala.reflect.internal.FatalError: package class scala does not have a member Int
-  // Ant build does the same thing always: it puts binaries for documented classes on the classpath
-  // sbt never does this by default (which seems like a good default)
   dependencyClasspath in (Compile, doc) += (classDirectory in Compile).value,
-  doc in Compile <<= doc in Compile dependsOn (compile in Compile)
+  doc in Compile := (doc in Compile).dependsOn(compile in Compile).value
 )
 
 def regexFileFilter(s: String): FileFilter = new FileFilter {
@@ -323,9 +332,20 @@ def regexFileFilter(s: String): FileFilter = new FileFilter {
   def accept(f: File) = pat.matcher(f.getAbsolutePath.replace('\\', '/')).matches()
 }
 
+def setForkedWorkingDirectory: Seq[Setting[_]] = {
+  // When we fork subprocesses, use the base directory as the working directory.
+  // This“ enables `sbt> partest test/files/run/t1.scala` or `sbt> scalac sandbox/test.scala`
+  val setting = (forkOptions in Compile) := (forkOptions in Compile).value.withWorkingDirectory((baseDirectory in ThisBuild).value)
+  setting ++ inTask(run)(setting)
+}
+
+// This project provides the STARR scalaInstance for bootstrapping
+lazy val bootstrap = project in file("target/bootstrap")
+
 lazy val library = configureAsSubproject(project)
-  .settings(generatePropertiesFileSettings: _*)
-  .settings(Osgi.settings: _*)
+  .settings(generatePropertiesFileSettings)
+  .settings(Osgi.settings)
+  .settings(AutomaticModuleName.settings("scala.library"))
   .settings(
     name := "scala-library",
     description := "Scala Standard Library",
@@ -343,7 +363,7 @@ lazy val library = configureAsSubproject(project)
     // Include *.txt files in source JAR:
     mappings in Compile in packageSrc ++= {
       val base = (unmanagedResourceDirectories in Compile).value
-      base ** "*.txt" pair relativeTo(base)
+      base ** "*.txt" pair Path.relativeTo(base)
     },
     Osgi.headers += "Import-Package" -> "sun.misc;resolution:=optional, *",
     Osgi.jarlist := true,
@@ -351,15 +371,19 @@ lazy val library = configureAsSubproject(project)
       "/project/name" -> <name>Scala Library</name>,
       "/project/description" -> <description>Standard library for the Scala Programming Language</description>,
       "/project/packaging" -> <packaging>jar</packaging>
-    )
+    ),
+    // Remove the dependency on "forkjoin" from the POM because it is included in the JAR:
+    pomDependencyExclusions += ((organization.value, "forkjoin")),
+    MimaFilters.mimaSettings,
   )
   .settings(filterDocSources("*.scala" -- (regexFileFilter(".*/runtime/.*\\$\\.scala") ||
                                            regexFileFilter(".*/runtime/ScalaRunTime\\.scala") ||
-                                           regexFileFilter(".*/runtime/StringAdd\\.scala"))): _*)
+                                           regexFileFilter(".*/runtime/StringAdd\\.scala"))))
 
 lazy val reflect = configureAsSubproject(project)
-  .settings(generatePropertiesFileSettings: _*)
-  .settings(Osgi.settings: _*)
+  .settings(generatePropertiesFileSettings)
+  .settings(Osgi.settings)
+  .settings(AutomaticModuleName.settings("scala.reflect"))
   .settings(
     name := "scala-reflect",
     description := "Scala Reflection Library",
@@ -375,25 +399,48 @@ lazy val reflect = configureAsSubproject(project)
       "/project/name" -> <name>Scala Compiler</name>,
       "/project/description" -> <description>Compiler for the Scala Programming Language</description>,
       "/project/packaging" -> <packaging>jar</packaging>
-    )
+    ),
+    MimaFilters.mimaSettings,
   )
   .dependsOn(library)
 
+lazy val compilerOptionsExporter = Project("compilerOptionsExporter", file(".") / "src" / "compilerOptionsExporter")
+  .dependsOn(compiler, reflect, library)
+  .settings(clearSourceAndResourceDirectories)
+  .settings(commonSettings)
+  .settings(disableDocs)
+  .settings(disablePublishing)
+  .settings(
+    libraryDependencies ++= Seq(
+      "com.fasterxml.jackson.core" % "jackson-core" % "2.9.7",
+      "com.fasterxml.jackson.core" % "jackson-annotations" % "2.9.7",
+      "com.fasterxml.jackson.core" % "jackson-databind" % "2.9.7",
+      "com.fasterxml.jackson.dataformat" % "jackson-dataformat-yaml" % "2.9.7",
+      "com.fasterxml.jackson.module" %% "jackson-module-scala" % "2.9.7"
+    )
+  )
+
 lazy val compiler = configureAsSubproject(project)
-  .settings(generatePropertiesFileSettings: _*)
-  .settings(Osgi.settings: _*)
+  .settings(generatePropertiesFileSettings)
+  .settings(generateBuildCharacterFileSettings)
+  .settings(Osgi.settings)
+  .settings(AutomaticModuleName.settings("scala.tools.nsc"))
   .settings(
     name := "scala-compiler",
     description := "Scala Compiler",
     libraryDependencies ++= Seq(antDep, asmDep),
-    // These are only needed for the POM:
-    libraryDependencies ++= Seq(scalaXmlDep, scalaParserCombinatorsDep, jlineDep % "optional"),
+    // These are only needed for the POM. (And, note that the jansi dependency is a fiction
+    // for WhiteSource purposes; the JLine JAR contains a shaded jansi, but WhiteSource
+    // won't know about that unless we tell it.)
+    libraryDependencies ++= Seq(scalaXmlDep, jlineDep % "optional", jansiDep % "optional"),
+    buildCharacterPropertiesFile := (resourceManaged in Compile).value / "scala-buildcharacter.properties",
+    resourceGenerators in Compile += generateBuildCharacterPropertiesFile.map(file => Seq(file)).taskValue,
     // this a way to make sure that classes from interactive and scaladoc projects
-    // end up in compiler jar (that's what Ant build does)
-    // we need to use LocalProject references (with strings) to deal with mutual recursion
+    // end up in compiler jar. note that we need to use LocalProject references
+    // (with strings) to deal with mutual recursion
     products in Compile in packageBin :=
       (products in Compile in packageBin).value ++
-        Seq((dependencyClasspath in Compile).value.find(_.get(moduleID.key) == Some(asmDep)).get.data) ++
+        Seq((dependencyClasspath in Compile).value.find(_.get(moduleID.key).map(id => (id.organization, id.name, id.revision)).contains((asmDep.organization, asmDep.name, asmDep.revision))).get.data) ++
         (products in Compile in packageBin in LocalProject("interactive")).value ++
         (products in Compile in packageBin in LocalProject("scaladoc")).value ++
         (products in Compile in packageBin in LocalProject("repl")).value ++
@@ -408,7 +455,17 @@ lazy val compiler = configureAsSubproject(project)
         (unmanagedResourceDirectories in Compile in LocalProject("interactive")).value ++
         (unmanagedResourceDirectories in Compile in LocalProject("scaladoc")).value ++
         (unmanagedResourceDirectories in Compile in LocalProject("repl")).value
-      base ** ((includeFilter in unmanagedResources in Compile).value || "*.scala" || "*.psd" || "*.ai" || "*.java") pair relativeTo(base)
+      base ** ((includeFilter in unmanagedResources in Compile).value || "*.scala" || "*.psd" || "*.ai" || "*.java") pair Path.relativeTo(base)
+    },
+    // Include the additional projects in the scaladoc JAR:
+    sources in Compile in doc ++= {
+      val base =
+        (unmanagedSourceDirectories in Compile in LocalProject("interactive")).value ++
+        (unmanagedSourceDirectories in Compile in LocalProject("scaladoc")).value ++
+        (unmanagedSourceDirectories in Compile in LocalProject("repl")).value
+      ((base ** ("*.scala" || "*.java"))
+        --- (base ** "Scaladoc*ModelTest.scala") // exclude test classes that depend on partest
+      ).get
     },
     scalacOptions in Compile in doc ++= Seq(
       "-doc-root-content", (sourceDirectory in Compile).value + "/rootdoc.txt"
@@ -416,32 +473,28 @@ lazy val compiler = configureAsSubproject(project)
     Osgi.headers ++= Seq(
       "Import-Package" -> ("jline.*;resolution:=optional," +
                            "org.apache.tools.ant.*;resolution:=optional," +
-                           "scala.util.parsing.*;version=\"${range;[====,====];"+versionNumber("scala-parser-combinators")+"}\";resolution:=optional," +
                            "scala.xml.*;version=\"${range;[====,====];"+versionNumber("scala-xml")+"}\";resolution:=optional," +
                            "scala.*;version=\"${range;[==,=+);${ver}}\"," +
                            "*"),
       "Class-Path" -> "scala-reflect.jar scala-library.jar"
     ),
-    // Generate the ScriptEngineFactory service definition. The ant build does this when building
+    // Generate the ScriptEngineFactory service definition. The Ant build does this when building
     // the JAR but sbt has no support for it and it is easier to do as a resource generator:
-    generateServiceProviderResources("javax.script.ScriptEngineFactory" -> "scala.tools.nsc.interpreter.IMain$Factory"),
+    generateServiceProviderResources("javax.script.ScriptEngineFactory" -> "scala.tools.nsc.interpreter.Scripted$Factory"),
     managedResourceDirectories in Compile := Seq((resourceManaged in Compile).value),
     fixPom(
       "/project/name" -> <name>Scala Compiler</name>,
       "/project/description" -> <description>Compiler for the Scala Programming Language</description>,
       "/project/packaging" -> <packaging>jar</packaging>
     ),
-    apiURL := None
+    apiURL := None,
+    pomDependencyExclusions ++= List(("org.apache.ant", "ant"), ("org.scala-lang.modules", "scala-asm"))
   )
-  .settings(removePomDependencies(
-    ("org.apache.ant", "ant"),
-    ("org.scala-lang.modules", "scala-asm")
-  ): _*)
   .dependsOn(library, reflect)
 
 lazy val interactive = configureAsSubproject(project)
-  .settings(disableDocs: _*)
-  .settings(disablePublishing: _*)
+  .settings(disableDocs)
+  .settings(disablePublishing)
   .settings(
     name := "scala-compiler-interactive",
     description := "Scala Interactive Compiler"
@@ -449,17 +502,17 @@ lazy val interactive = configureAsSubproject(project)
   .dependsOn(compiler)
 
 lazy val repl = configureAsSubproject(project)
-  .settings(disableDocs: _*)
-  .settings(disablePublishing: _*)
+  .settings(disableDocs)
+  .settings(disablePublishing)
   .settings(
     connectInput in run := true,
-    run <<= (run in Compile).partialInput(" -usejavacp") // Automatically add this so that `repl/run` works without additional arguments.
+    run := (run in Compile).partialInput(" -usejavacp").evaluated // Automatically add this so that `repl/run` works without additional arguments.
   )
   .dependsOn(compiler, interactive)
 
 lazy val replJline = configureAsSubproject(Project("repl-jline", file(".") / "src" / "repl-jline"))
-  .settings(disableDocs: _*)
-  .settings(disablePublishing: _*)
+  .settings(disableDocs)
+  .settings(disablePublishing)
   .settings(
     libraryDependencies += jlineDep,
     name := "scala-repl-jline"
@@ -467,21 +520,21 @@ lazy val replJline = configureAsSubproject(Project("repl-jline", file(".") / "sr
   .dependsOn(repl)
 
 lazy val replJlineEmbedded = Project("repl-jline-embedded", file(".") / "target" / "repl-jline-embedded-src-dummy")
-  .settings(scalaSubprojectSettings: _*)
-  .settings(disablePublishing: _*)
+  .settings(scalaSubprojectSettings)
+  .settings(disablePublishing)
   .settings(
     name := "scala-repl-jline-embedded",
     // There is nothing to compile for this project. Instead we use the compile task to create
     // shaded versions of repl-jline and jline.jar. dist/mkBin puts all of quick/repl,
     // quick/repl-jline and quick/repl-jline-shaded on the classpath for quick/bin scripts.
-    // This is different from the ant build where all parts are combined into quick/repl, but
+    // This is different from the Ant build where all parts are combined into quick/repl, but
     // it is cleaner because it avoids circular dependencies.
-    compile in Compile <<= (compile in Compile).dependsOn(Def.task {
+    compile in Compile := (compile in Compile).dependsOn(Def.task {
       import java.util.jar._
       import collection.JavaConverters._
       val inputs: Iterator[JarJar.Entry] = {
         val repljlineClasses = (products in Compile in replJline).value.flatMap(base => Path.allSubpaths(base).map(x => (base, x._1)))
-        val jlineJAR = (dependencyClasspath in Compile).value.find(_.get(moduleID.key) == Some(jlineDep)).get.data
+        val jlineJAR = findJar((dependencyClasspath in Compile).value, jlineDep).get.data
         val jarFile = new JarFile(jlineJAR)
         val jarEntries = jarFile.entries.asScala.filterNot(_.isDirectory).map(entry => JarJar.JarEntryInput(jarFile, entry))
         def compiledClasses = repljlineClasses.iterator.map { case (base, file) => JarJar.FileInput(base, file) }
@@ -498,20 +551,22 @@ lazy val replJlineEmbedded = Project("repl-jline-embedded", file(".") / "target"
       )
       val outdir = (classDirectory in Compile).value
       JarJar(inputs, outdir, config)
-    }),
+    }).value,
     connectInput in run := true
 
   )
   .dependsOn(replJline)
 
 lazy val scaladoc = configureAsSubproject(project)
-  .settings(disableDocs: _*)
-  .settings(disablePublishing: _*)
+  .settings(disableDocs)
+  .settings(disablePublishing)
   .settings(
     name := "scala-compiler-doc",
     description := "Scala Documentation Generator",
-    libraryDependencies ++= Seq(scalaXmlDep, scalaParserCombinatorsDep, partestDep),
-    includeFilter in unmanagedResources in Compile := "*.html" | "*.css" | "*.gif" | "*.png" | "*.js" | "*.txt" | "*.svg" | "*.eot" | "*.woff" | "*.ttf"
+    libraryDependencies ++= Seq(scalaXmlDep),
+    includeFilter in unmanagedResources in Compile := "*.html" | "*.css" | "*.gif" | "*.png" | "*.js" | "*.txt" | "*.svg" | "*.eot" | "*.woff" | "*.ttf",
+    libraryDependencies ++= ScaladocSettings.webjarResources,
+    resourceGenerators in Compile += ScaladocSettings.extractResourcesFromWebjar
   )
   .dependsOn(compiler)
 
@@ -524,39 +579,192 @@ lazy val scalap = configureAsSubproject(project)
       "/project/name" -> <name>Scalap</name>,
       "/project/description" -> <description>bytecode analysis tool</description>,
       "/project/properties" -> scala.xml.Text("")
-    )
+    ),
+    headerLicense  := Some(HeaderLicense.Custom(
+      s"""Scala classfile decoder (${(homepage in ThisBuild).value.get})
+         |
+         |Copyright EPFL and Lightbend, Inc.
+         |
+         |Licensed under Apache License 2.0
+         |(http://www.apache.org/licenses/LICENSE-2.0).
+         |
+         |See the NOTICE file distributed with this work for
+         |additional information regarding copyright ownership.
+         |""".stripMargin)),
+    (headerSources in Compile) ~= { xs =>
+      val excluded = Set("Memoisable.scala", "Result.scala", "Rule.scala", "Rules.scala", "SeqRule.scala")
+      xs filter { x => !excluded(x.getName) }
+    },
+    (headerResources in Compile) := Nil
   )
   .dependsOn(compiler)
 
-lazy val partestExtras = configureAsSubproject(Project("partest-extras", file(".") / "src" / "partest-extras"))
-  .dependsOn(replJlineEmbedded)
-  .settings(clearSourceAndResourceDirectories: _*)
-  .settings(disableDocs: _*)
-  .settings(disablePublishing: _*)
+lazy val partest = configureAsSubproject(project)
+  .dependsOn(library, reflect, compiler, scalap, replJlineEmbedded, scaladoc)
+  .settings(Osgi.settings)
+  .settings(AutomaticModuleName.settings("scala.partest"))
   .settings(
-    name := "scala-partest-extras",
-    description := "Scala Compiler Testing Tool (compiler-specific extras)",
-    libraryDependencies += partestDep,
-    unmanagedSourceDirectories in Compile := List(baseDirectory.value)
+    name := "scala-partest",
+    description := "Scala Compiler Testing Tool",
+    libraryDependencies ++= List(testInterfaceDep, diffUtilsDep, junitDep),
+    pomDependencyExclusions ++= List((organization.value, "scala-repl-jline-embedded"), (organization.value, "scala-compiler-doc")),
+    fixPom(
+      "/project/name" -> <name>Scala Partest</name>,
+      "/project/description" -> <description>Scala Compiler Testing Tool</description>,
+      "/project/packaging" -> <packaging>jar</packaging>
+    ),
   )
 
+// An instrumented version of BoxesRunTime and ScalaRunTime for partest's "specialized" test category
+lazy val specLib = project.in(file("test") / "instrumented")
+  .dependsOn(library, reflect, compiler)
+  .settings(clearSourceAndResourceDirectories)
+  .settings(commonSettings)
+  .settings(disableDocs)
+  .settings(disablePublishing)
+  .settings(
+    sourceGenerators in Compile += Def.task {
+      import scala.collection.JavaConverters._
+      val srcBase = (sourceDirectories in Compile in library).value.head / "scala/runtime"
+      val targetBase = (sourceManaged in Compile).value / "scala/runtime"
+      def patch(srcFile: String, patchFile: String): File = try {
+        val patchLines: List[String] = IO.readLines(baseDirectory.value / patchFile)
+        val origLines: List[String] = IO.readLines(srcBase / srcFile)
+        import difflib.DiffUtils
+        val p = DiffUtils.parseUnifiedDiff(patchLines.asJava)
+        val r = DiffUtils.patch(origLines.asJava, p)
+        val target = targetBase / srcFile
+        val patched = r.asScala.toList
+        IO.writeLines(target, patched)
+        if (patched == origLines) {
+          println(p)
+          println(patchLines.mkString("\n"))
+          println(origLines.mkString("\n"))
+          throw new RuntimeException("Patch did not apply any changes! " + baseDirectory.value / patchFile + " / " + (srcBase / srcFile))
+        }
+
+        target
+      } catch { case ex: Exception =>
+        streams.value.log.error(s"Error patching $srcFile: $ex")
+        throw ex
+      }
+      IO.createDirectory(targetBase)
+      Seq(
+        patch("BoxesRunTime.java", "boxes.patch"),
+        patch("ScalaRunTime.scala", "srt.patch")
+      )
+    }.taskValue
+  )
+
+lazy val bench = project.in(file("test") / "benchmarks")
+  .dependsOn(library, compiler)
+  .settings(instanceSettings)
+  .settings(disableDocs)
+  .settings(disablePublishing)
+  .enablePlugins(JmhPlugin)
+  .settings(
+    name := "test-benchmarks",
+    libraryDependencies += "org.openjdk.jol" % "jol-core" % "0.6",
+    compileOrder := CompileOrder.JavaThenScala, // to allow inlining from Java ("... is defined in a Java source (mixed compilation), no bytecode is available")
+    scalacOptions ++= Seq("-feature", "-opt:l:inline", "-opt-inline-from:scala/**", "-opt-warnings"),
+  ).settings(inConfig(JmhPlugin.JmhKeys.Jmh)(scalabuild.JitWatchFilePlugin.jitwatchSettings))
+
 lazy val junit = project.in(file("test") / "junit")
-  .dependsOn(library, reflect, compiler, partestExtras, scaladoc)
-  .settings(clearSourceAndResourceDirectories: _*)
-  .settings(commonSettings: _*)
-  .settings(disableDocs: _*)
-  .settings(disablePublishing: _*)
+  .dependsOn(library, reflect, compiler, partest, scaladoc)
+  .settings(clearSourceAndResourceDirectories)
+  .settings(commonSettings)
+  .settings(disableDocs)
+  .settings(disablePublishing)
   .settings(
     fork in Test := true,
-    libraryDependencies ++= Seq(junitDep, junitIntefaceDep, jolDep),
+    javaOptions in Test += "-Xss1M",
+    (forkOptions in Test) := (forkOptions in Test).value.withWorkingDirectory((baseDirectory in ThisBuild).value),
+    (forkOptions in Test in testOnly) := (forkOptions in Test in testOnly).value.withWorkingDirectory((baseDirectory in ThisBuild).value),
+    libraryDependencies ++= Seq(junitDep, junitInterfaceDep, jolDep),
     testOptions += Tests.Argument(TestFrameworks.JUnit, "-a", "-v"),
+    unmanagedSourceDirectories in Compile := Nil,
     unmanagedSourceDirectories in Test := List(baseDirectory.value)
   )
 
+lazy val scalacheck = project.in(file("test") / "scalacheck")
+  .dependsOn(library, reflect, compiler, scaladoc)
+  .settings(clearSourceAndResourceDirectories)
+  .settings(commonSettings)
+  .settings(disableDocs)
+  .settings(disablePublishing)
+  .settings(
+    // enable forking to workaround https://github.com/sbt/sbt/issues/4009
+    fork in Test := true,
+    javaOptions in Test += "-Xss1M",
+    testOptions ++= {
+      if ((fork in Test).value) Nil
+      else List(Tests.Cleanup { loader =>
+        sbt.internal.inc.ModuleUtilities.getObject("scala.TestCleanup", loader).asInstanceOf[Runnable].run()
+      })
+    },
+    libraryDependencies ++= Seq(scalacheckDep),
+    unmanagedSourceDirectories in Compile := Nil,
+    unmanagedSourceDirectories in Test := List(baseDirectory.value)
+  ).settings(
+    // Workaround for https://github.com/sbt/sbt/pull/3985
+    List(Keys.test, Keys.testOnly).map(task => parallelExecution in task := false) : _*
+  )
+
+lazy val osgiTestFelix = osgiTestProject(
+  project.in(file(".") / "target" / "osgiTestFelix"),
+  "org.apache.felix" % "org.apache.felix.framework" % "5.0.1")
+
+lazy val osgiTestEclipse = osgiTestProject(
+  project.in(file(".") / "target" / "osgiTestEclipse"),
+  "org.eclipse.tycho" % "org.eclipse.osgi" % "3.10.100.v20150521-1310")
+
+def osgiTestProject(p: Project, framework: ModuleID) = p
+  .dependsOn(library, reflect, compiler)
+  .settings(clearSourceAndResourceDirectories)
+  .settings(commonSettings)
+  .settings(disableDocs)
+  .settings(disablePublishing)
+  .settings(
+    fork in Test := true,
+    parallelExecution in Test := false,
+    libraryDependencies ++= {
+      val paxExamVersion = "4.5.0" // Last version which supports Java 6
+      Seq(
+        junitDep,
+        junitInterfaceDep,
+        "org.ops4j.pax.exam" % "pax-exam-container-native" % paxExamVersion,
+        "org.ops4j.pax.exam" % "pax-exam-junit4" % paxExamVersion,
+        "org.ops4j.pax.exam" % "pax-exam-link-assembly" % paxExamVersion,
+        "org.ops4j.pax.url" % "pax-url-aether" % "2.4.1",
+        "org.ops4j.pax.swissbox" % "pax-swissbox-tracker" % "1.8.1",
+        "ch.qos.logback" % "logback-core" % "1.1.3",
+        "ch.qos.logback" % "logback-classic" % "1.1.3",
+        "org.slf4j" % "slf4j-api" % "1.7.12",
+        framework % "test"
+      )
+    },
+    Keys.test in Test := (Keys.test in Test).dependsOn(packageBin in Compile).value,
+    testOptions += Tests.Argument(TestFrameworks.JUnit, "-a", "-v", "-q"),
+    javaOptions in Test += "-Dscala.bundle.dir=" + (buildDirectory in ThisBuild).value / "osgi",
+    (forkOptions in Test in test) := (forkOptions in Test in test).value.withWorkingDirectory((baseDirectory in ThisBuild).value),
+    unmanagedSourceDirectories in Test := List((baseDirectory in ThisBuild).value / "test" / "osgi" / "src"),
+    unmanagedResourceDirectories in Compile := (unmanagedSourceDirectories in Test).value,
+    includeFilter in unmanagedResources in Compile := "*.xml",
+    packageBin in Compile := { // Put the bundle JARs required for the tests into build/osgi
+      val targetDir = (buildDirectory in ThisBuild).value / "osgi"
+      val mappings = ((mkPack in dist).value / "lib").listFiles.collect {
+        case f if f.getName.startsWith("scala-") && f.getName.endsWith(".jar") => (f, targetDir / f.getName)
+      }
+      IO.copy(mappings, CopyOptions() withOverwrite true)
+      targetDir
+    },
+    cleanFiles += (buildDirectory in ThisBuild).value / "osgi"
+  )
+
 lazy val partestJavaAgent = Project("partest-javaagent", file(".") / "src" / "partest-javaagent")
-  .settings(commonSettings: _*)
-  .settings(generatePropertiesFileSettings: _*)
-  .settings(disableDocs: _*)
+  .settings(commonSettings)
+  .settings(generatePropertiesFileSettings)
+  .settings(disableDocs)
   .settings(
     libraryDependencies += asmDep,
     publishLocal := {},
@@ -564,8 +772,6 @@ lazy val partestJavaAgent = Project("partest-javaagent", file(".") / "src" / "pa
     // Setting name to "scala-partest-javaagent" so that the jar file gets that name, which the Runner relies on
     name := "scala-partest-javaagent",
     description := "Scala Compiler Testing Tool (compiler-specific java agent)",
-    // writing jar file to $buildDirectory/pack/lib because that's where it's expected to be found
-    setJarLocation,
     // add required manifest entry - previously included from file
     packageOptions in (Compile, packageBin) +=
       Package.ManifestAttributes( "Premain-Class" -> "scala.tools.partest.javaagent.ProfilingAgent" ),
@@ -574,49 +780,72 @@ lazy val partestJavaAgent = Project("partest-javaagent", file(".") / "src" / "pa
   )
 
 lazy val test = project
-  .dependsOn(compiler, interactive, replJlineEmbedded, scalap, partestExtras, partestJavaAgent, scaladoc)
+  .dependsOn(compiler, interactive, replJlineEmbedded, scalap, partest, partestJavaAgent, scaladoc)
+  .disablePlugins(plugins.JUnitXmlReportPlugin)
   .configs(IntegrationTest)
-  .settings(commonSettings: _*)
-  .settings(disableDocs: _*)
-  .settings(disablePublishing: _*)
-  .settings(Defaults.itSettings: _*)
+  .settings(commonSettings)
+  .settings(disableDocs)
+  .settings(disablePublishing)
+  .settings(Defaults.itSettings)
   .settings(
-    libraryDependencies ++= Seq(asmDep, partestDep, scalaXmlDep, scalacheckDep),
-    unmanagedBase in IntegrationTest := baseDirectory.value / "files" / "lib",
-    unmanagedJars in IntegrationTest <+= (unmanagedBase) (j => Attributed.blank(j)) map(identity),
+    libraryDependencies ++= Seq(asmDep, scalaXmlDep),
     // no main sources
     sources in Compile := Seq.empty,
     // test sources are compiled in partest run, not here
     sources in IntegrationTest := Seq.empty,
     fork in IntegrationTest := true,
-    javaOptions in IntegrationTest += "-Xmx1G",
+    // enable this in 2.13, when tests pass
+    //scalacOptions in Compile += "-Yvalidate-pos:parser,typer",
+    scalacOptions in Compile -= "-Ywarn-unused:imports",
+    javaOptions in IntegrationTest ++= List("-Xmx2G", "-Dpartest.exec.in.process=true", "-Dfile.encoding=UTF-8", "-Duser.language=en", "-Duser.country=US"),
+    testOptions in IntegrationTest += Tests.Argument("-Dfile.encoding=UTF-8", "-Duser.language=en", "-Duser.country=US"),
     testFrameworks += new TestFramework("scala.tools.partest.sbt.Framework"),
-    testOptions in IntegrationTest += Tests.Setup( () => root.base.getAbsolutePath + "/pull-binary-libs.sh" ! ),
-    testOptions in IntegrationTest += Tests.Argument("-Dpartest.java_opts=-Xmx1024M -Xms64M -XX:MaxPermSize=128M"),
-    definedTests in IntegrationTest += (
-      new sbt.TestDefinition(
-        "partest",
-        // marker fingerprint since there are no test classes
-        // to be discovered by sbt:
-        new sbt.testing.AnnotatedFingerprint {
-          def isModule = true
-          def annotationName = "partest"
-        }, true, Array())
-     )
+    testOptions in IntegrationTest += Tests.Argument("-Dpartest.java_opts=-Xmx1024M -Xms64M"),
+    testOptions in IntegrationTest += Tests.Argument("-Dpartest.scalac_opts=" + (scalacOptions in Compile).value.mkString(" ")),
+    (forkOptions in IntegrationTest) := (forkOptions in IntegrationTest).value.withWorkingDirectory((baseDirectory in ThisBuild).value),
+    testOptions in IntegrationTest += {
+      val cp = (dependencyClasspath in Test).value
+      val baseDir = (baseDirectory in ThisBuild).value
+      val instrumentedJar = (packagedArtifact in (LocalProject("specLib"), Compile, packageBin)).value._2
+      Tests.Setup { () =>
+        // Copy code.jar (resolved in the otherwise unused scope "test") and instrumented.jar (from specLib)to the location where partest expects them
+        IO.copyFile(instrumentedJar, baseDir / "test/files/speclib/instrumented.jar")
+      }
+    },
+    definedTests in IntegrationTest += new sbt.TestDefinition(
+      "partest",
+      // marker fingerprint since there are no test classes
+      // to be discovered by sbt:
+      new sbt.testing.AnnotatedFingerprint {
+        def isModule = true
+        def annotationName = "partest"
+      }, true, Array()
+    ),
+    executeTests in IntegrationTest := {
+      val log = streams.value.log
+      val result = (executeTests in IntegrationTest).value
+      val result2 = (executeTests in Test).value
+      if (result.overall != TestResult.Error && result.events.isEmpty) {
+        // workaround for https://github.com/sbt/sbt/issues/2722
+        log.error("No test events found")
+        result2.copy(overall = TestResult.Error)
+      }
+      else result
+    },
+    testListeners in IntegrationTest += new PartestTestListener(target.value)
   )
 
 lazy val manual = configureAsSubproject(project)
-  .settings(disableDocs: _*)
-  .settings(disablePublishing: _*)
+  .settings(disableDocs)
+  .settings(disablePublishing)
   .settings(
-    libraryDependencies ++= Seq(scalaXmlDep, antDep),
+    libraryDependencies ++= Seq(scalaXmlDep, antDep, "org.scala-lang" % "scala-library" % scalaVersion.value),
     classDirectory in Compile := (target in Compile).value / "classes"
   )
-  .dependsOn(library)
 
 lazy val libraryAll = Project("library-all", file(".") / "target" / "library-all-src-dummy")
-  .settings(commonSettings: _*)
-  .settings(disableDocs: _*)
+  .settings(commonSettings)
+  .settings(disableDocs)
   .settings(
     name := "scala-library-all",
     publishArtifact in (Compile, packageBin) := false,
@@ -631,18 +860,18 @@ lazy val libraryAll = Project("library-all", file(".") / "target" / "library-all
   .dependsOn(library, reflect)
 
 lazy val scalaDist = Project("scala-dist", file(".") / "target" / "scala-dist-dist-src-dummy")
-  .settings(commonSettings: _*)
-  .settings(disableDocs: _*)
+  .settings(commonSettings)
+  .settings(disableDocs)
   .settings(
     mappings in Compile in packageBin ++= {
       val binBaseDir = buildDirectory.value / "pack"
-      val binMappings = (mkBin in dist).value.pair(relativeTo(binBaseDir), errorIfNone = false)
+      val binMappings = (mkBin in dist).value.pair(Path.relativeTo(binBaseDir), errorIfNone = false)
       // With the way the resource files are spread out over the project sources we can't just add
       // an unmanagedResourceDirectory, so we generate the mappings manually:
       val docBaseDir = (baseDirectory in ThisBuild).value
-      val docMappings = (docBaseDir / "doc").*** pair relativeTo(docBaseDir)
+      val docMappings = (docBaseDir / "doc").allPaths pair Path.relativeTo(docBaseDir)
       val resBaseDir = (baseDirectory in ThisBuild).value / "src/manual/scala/tools/docutil/resources"
-      val resMappings = resBaseDir ** ("*.html" | "*.css" | "*.gif" | "*.png") pair (p => relativeTo(resBaseDir)(p).map("doc/tools/" + _))
+      val resMappings = resBaseDir ** ("*.html" | "*.css" | "*.gif" | "*.png") pair (p => Path.relativeTo(resBaseDir)(p).map("doc/tools/" + _))
       docMappings ++ resMappings ++ binMappings
     },
     resourceGenerators in Compile += Def.task {
@@ -652,14 +881,14 @@ lazy val scalaDist = Project("scala-dist", file(".") / "target" / "scala-dist-di
       val fixedManOut = (resourceManaged in Compile).value / "man"
       IO.createDirectory(htmlOut)
       IO.createDirectory(manOut / "man1")
-      toError(runner.value.run("scala.tools.docutil.ManMaker",
+      runner.value.run("scala.tools.docutil.ManMaker",
         (fullClasspath in Compile in manual).value.files,
         Seq(command, htmlOut.getAbsolutePath, manOut.getAbsolutePath),
-        streams.value.log))
-      (manOut ** "*.1" pair rebase(manOut, fixedManOut)).foreach { case (in, out) =>
+        streams.value.log).failed foreach (sys error _.getMessage)
+      (manOut ** "*.1" pair Path.rebase(manOut, fixedManOut)).foreach { case (in, out) =>
         // Generated manpages should always use LF only. There doesn't seem to be a good reason
         // for generating them with the platform EOL first and then converting them but that's
-        // what the ant build does.
+        // what the Ant build does.
         IO.write(out, IO.readBytes(in).filterNot(_ == '\r'))
       }
       (htmlOut ** "*.html").get ++ (fixedManOut ** "*.1").get
@@ -676,14 +905,24 @@ lazy val scalaDist = Project("scala-dist", file(".") / "target" / "scala-dist-di
   )
   .dependsOn(libraryAll, compiler, scalap)
 
-lazy val root = (project in file("."))
-  .settings(disableDocs: _*)
-  .settings(disablePublishing: _*)
-  .settings(generateBuildCharacterFileSettings: _*)
+lazy val root: Project = (project in file("."))
+  .settings(disableDocs)
+  .settings(disablePublishing)
+  .settings(generateBuildCharacterFileSettings)
   .settings(
-    publish := {},
-    publishLocal := {},
     commands ++= ScriptCommands.all,
+    extractBuildCharacterPropertiesFile := {
+      val jar = (scalaInstance in bootstrap).value.allJars.find(_.getName contains "-compiler").get
+      val bc = buildCharacterPropertiesFile.value
+      val packagedName = "scala-buildcharacter.properties"
+      IO.withTemporaryDirectory { tmp =>
+        val extracted = IO.unzip(jar, tmp, new SimpleFilter(_ == packagedName)).headOption.getOrElse {
+          throw new RuntimeException(s"No file $packagedName found in bootstrap compiler $jar")
+        }
+        IO.copyFile(extracted, bc)
+        bc
+      }
+    },
     // Generate (Product|TupleN|Function|AbstractFunction)*.scala files and scaladoc stubs for all AnyVal sources.
     // They should really go into a managedSources dir instead of overwriting sources checked into git but scaladoc
     // source links (could be fixed by shipping these sources with the scaladoc bundles) and scala-js source maps
@@ -694,31 +933,101 @@ lazy val root = (project in file("."))
       GenerateAnyVals.run(dir.getAbsoluteFile)
       state
     },
-    Quiet.silenceIvyUpdateInfoLogging
+
+    testAll := {
+      val results = ScriptCommands.sequence[(Result[Unit], String)](List(
+        (Keys.test in Test in junit).result map (_ -> "junit/test"),
+        (Keys.test in Test in scalacheck).result map (_ -> "scalacheck/test"),
+        (testOnly in IntegrationTest in testP).toTask(" -- run").result map (_ -> "partest run"),
+        (testOnly in IntegrationTest in testP).toTask(" -- pos neg jvm").result map (_ -> "partest pos neg jvm"),
+        (testOnly in IntegrationTest in testP).toTask(" -- res scalap specialized").result map (_ -> "partest res scalap specialized"),
+        (testOnly in IntegrationTest in testP).toTask(" -- instrumented presentation").result map (_ -> "partest instrumented presentation"),
+        (testOnly in IntegrationTest in testP).toTask(" -- --srcpath scaladoc").result map (_ -> "partest --srcpath scaladoc"),
+        (testOnly in IntegrationTest in testP).toTask(" -- --srcpath async").result map (_ -> "partest --srcpath async"),
+        (Keys.test in Test in osgiTestFelix).result map (_ -> "osgiTestFelix/test"),
+        (Keys.test in Test in osgiTestEclipse).result map (_ -> "osgiTestEclipse/test"),
+        (library / mimaReportBinaryIssues).result.map(_ -> "library/mimaReportBinaryIssues"), // doesn't aggregate..
+        (reflect / mimaReportBinaryIssues).result.map(_ -> "reflect/mimaReportBinaryIssues"), // ..so specify both
+        (compile in Compile in bench).map(_ => ()).result map (_ -> "bench/compile"),
+        Def.task(()).dependsOn( // Run these in parallel:
+          doc in Compile in library,
+          doc in Compile in reflect,
+          doc in Compile in compiler,
+          doc in Compile in scalap
+        ).result map (_ -> "doc")
+      )).value
+      val log = streams.value.log
+      val failed = results.collect { case (Inc(i), d) => (i, d) }
+      if (failed.nonEmpty) {
+        def showScopedKey(k: Def.ScopedKey[_]): String =
+          Vector(
+            k.scope.project.toOption.map {
+              case p: ProjectRef => p.project
+              case p => p
+            }.map(_ + "/"),
+            k.scope.config.toOption.map(_.name + ":"),
+            k.scope.task.toOption.map(_.label + "::")
+          ).flatten.mkString + k.key
+        val loggedThis, loggedAny = new scala.collection.mutable.HashSet[String]
+        def findRootCauses(i: Incomplete, currentTask: String): Vector[(String, Option[Throwable])] = {
+          val sk = i.node match {
+            case Some(t: Task[_]) =>
+              t.info.attributes.entries.collectFirst { case e if e.key == Keys.taskDefinitionKey => e.value.asInstanceOf[Def.ScopedKey[_]] }
+                .map(showScopedKey)
+            case _ => None
+          }
+          val task = sk.getOrElse(currentTask)
+          val dup = sk.exists(s => !loggedAny.add(s))
+          if(sk.exists(s => !loggedThis.add(s))) Vector.empty
+          else i.directCause match {
+            case Some(e) => Vector((task, if(dup) None else Some(e)))
+            case None => i.causes.toVector.flatMap(ch => findRootCauses(ch, task))
+          }
+        }
+        log.error(s"${failed.size} of ${results.length} test tasks failed:")
+        failed.foreach { case (i, d) =>
+          log.error(s"- $d")
+          loggedThis.clear
+          findRootCauses(i, "<unkown task>").foreach {
+            case (task, Some(ex)) => log.error(s"  - $task failed: $ex")
+            case (task, None)     => log.error(s"  - ($task failed)")
+          }
+        }
+        throw new RuntimeException
+      }
+    },
+    setIncOptions
   )
-  .aggregate(library, reflect, compiler, interactive, repl, replJline, replJlineEmbedded,
-    scaladoc, scalap, partestExtras, junit, libraryAll, scalaDist).settings(
+  .aggregate(library, reflect, compiler, compilerOptionsExporter, interactive, repl, replJline, replJlineEmbedded,
+    scaladoc, scalap, partest, junit, libraryAll, scalaDist).settings(
     sources in Compile := Seq.empty,
-    onLoadMessage := """|*** Welcome to the sbt build definition for Scala! ***
+    onLoadMessage := s"""|*** Welcome to the sbt build definition for Scala! ***
+      |version=${(Global / version).value} scalaVersion=${(Global / scalaVersion).value}
       |Check README.md for more information.""".stripMargin
   )
 
+def setIncOptions = incOptions := {
+  incOptions.value
+    .withRecompileOnMacroDef(Some(Boolean box false).asJava) // macros in library+reflect are hard-wired to implementations with `FastTrack`.
+}
+
 // The following subprojects' binaries are required for building "pack":
-lazy val distDependencies = Seq(replJline, replJlineEmbedded, compiler, library, partestExtras, partestJavaAgent, reflect, scalap, scaladoc)
+lazy val distDependencies = Seq(replJline, replJlineEmbedded, compiler, library, reflect, scalap, scaladoc)
 
 lazy val dist = (project in file("dist"))
   .settings(commonSettings)
   .settings(
     libraryDependencies ++= Seq(scalaSwingDep, jlineDep),
     mkBin := mkBinImpl.value,
-    mkQuick <<= Def.task {
+    mkQuick := Def.task {
       val cp = (fullClasspath in IntegrationTest in LocalProject("test")).value
       val propsFile = (buildDirectory in ThisBuild).value / "quick" / "partest.properties"
       val props = new java.util.Properties()
       props.setProperty("partest.classpath", cp.map(_.data.getAbsolutePath).mkString(sys.props("path.separator")))
       IO.write(props, null, propsFile)
-    } dependsOn ((distDependencies.map(products in Runtime in _) :+ mkBin): _*),
-    mkPack <<= Def.task {} dependsOn (packagedArtifact in (Compile, packageBin), mkBin),
+      (buildDirectory in ThisBuild).value / "quick"
+    }.dependsOn((distDependencies.map(products in Runtime in _) :+ mkBin): _*).value,
+    mkPack := Def.task { (buildDirectory in ThisBuild).value / "pack" }.dependsOn(packagedArtifact in (Compile, packageBin), mkBin).value,
     target := (baseDirectory in ThisBuild).value / "target" / thisProject.value.id,
     packageBin in Compile := {
       val extraDeps = Set(scalaSwingDep, scalaParserCombinatorsDep, scalaXmlDep)
@@ -728,14 +1037,17 @@ lazy val dist = (project in file("dist"))
       val extraJars = (externalDependencyClasspath in Compile).value.map(a => (a.get(moduleID.key), a.data)).collect {
         case (Some(m), f) if extraModules contains uniqueModule(m) => f
       }
-      val jlineJAR = (dependencyClasspath in Compile).value.find(_.get(moduleID.key) == Some(jlineDep)).get.data
-      val mappings = extraJars.map(f => (f, targetDir / f.getName)) :+ (jlineJAR, targetDir / "jline.jar")
-      IO.copy(mappings, overwrite = true)
+      val jlineJAR = findJar((dependencyClasspath in Compile).value, jlineDep).get.data
+      val mappings = extraJars.map(f => (f, targetDir / f.getName)) :+ ((jlineJAR, targetDir / "jline.jar"))
+      IO.copy(mappings, CopyOptions() withOverwrite true)
       targetDir
     },
     cleanFiles += (buildDirectory in ThisBuild).value / "quick",
     cleanFiles += (buildDirectory in ThisBuild).value / "pack",
-    packagedArtifact in (Compile, packageBin) <<= (packagedArtifact in (Compile, packageBin)).dependsOn(distDependencies.map(packagedArtifact in (Compile, packageBin) in _): _*)
+    packagedArtifact in (Compile, packageBin) :=
+      (packagedArtifact in (Compile, packageBin))
+        .dependsOn(distDependencies.map(packagedArtifact in (Compile, packageBin) in _): _*)
+        .value
   )
   .dependsOn(distDependencies.map(p => p: ClasspathDep[ProjectReference]): _*)
 
@@ -753,14 +1065,14 @@ lazy val dist = (project in file("dist"))
 def configureAsSubproject(project: Project): Project = {
   val base = file(".") / "src" / project.id
   (project in base)
-    .settings(scalaSubprojectSettings: _*)
-    .settings(generatePropertiesFileSettings: _*)
+    .settings(scalaSubprojectSettings)
 }
 
 lazy val buildDirectory = settingKey[File]("The directory where all build products go. By default ./build")
 lazy val mkBin = taskKey[Seq[File]]("Generate shell script (bash or Windows batch).")
-lazy val mkQuick = taskKey[Unit]("Generate a full build, including scripts, in build/quick")
-lazy val mkPack = taskKey[Unit]("Generate a full build, including scripts, in build/pack")
+lazy val mkQuick = taskKey[File]("Generate a full build, including scripts, in build/quick")
+lazy val mkPack = taskKey[File]("Generate a full build, including scripts, in build/pack")
+lazy val testAll = taskKey[Unit]("Run all test tasks sequentially")
 
 // Defining these settings is somewhat redundant as we also redefine settings that depend on them.
 // However, IntelliJ's project import works better when these are set correctly.
@@ -826,6 +1138,9 @@ commands += Command("partest")(_ => PartestUtil.partestParser((baseDirectory in 
   ("test/it:testOnly -- " + parsed) :: state
 }
 
+// Watch the test files also so ~partest triggers on test case changes
+watchSources ++= PartestUtil.testFilePaths((baseDirectory in ThisBuild).value, (baseDirectory in ThisBuild).value / "test")
+
 // Add tab completion to scalac et al.
 commands ++= {
   val commands =
@@ -845,7 +1160,7 @@ addCommandAlias("scalap",   "scalap/compile:runMain              scala.tools.sca
 
 lazy val intellij = taskKey[Unit]("Update the library classpaths in the IntelliJ project files.")
 
-def moduleDeps(p: Project) = (externalDependencyClasspath in Compile in p).map(a => (p.id, a.map(_.data)))
+def moduleDeps(p: Project, config: Configuration = Compile) = (externalDependencyClasspath in config in p).map(a => (p.id, a.map(_.data)))
 
 // aliases to projects to prevent name clashes
 def compilerP = compiler
@@ -856,12 +1171,14 @@ intellij := {
   import xml.transform._
 
   val s = streams.value
+  val compilerScalaInstance = (scalaInstance in LocalProject("compiler")).value
 
   val modules: List[(String, Seq[File])] = {
     // for the sbt build module, the dependencies are fetched from the project's build using sbt-buildinfo
-    val buildModule = ("scala-build", scalabuild.BuildInfo.buildClasspath.split(":").toSeq.map(new File(_)))
+    val buildModule = ("scala-build", scalabuild.BuildInfo.buildClasspath.split(java.io.File.pathSeparator).toSeq.map(new File(_)))
     // `sbt projects` lists all modules in the build
     buildModule :: List(
+      moduleDeps(bench).value,
       moduleDeps(compilerP).value,
       // moduleDeps(dist).value,                // No sources, therefore no module in IntelliJ
       moduleDeps(interactive).value,
@@ -869,7 +1186,7 @@ intellij := {
       moduleDeps(library).value,
       // moduleDeps(libraryAll).value,          // No sources
       moduleDeps(manual).value,
-      moduleDeps(partestExtras).value,
+      moduleDeps(partest).value,
       moduleDeps(partestJavaAgent).value,
       moduleDeps(reflect).value,
       moduleDeps(repl).value,
@@ -877,14 +1194,17 @@ intellij := {
       // moduleDeps(replJlineEmbedded).value,   // No sources
       // moduleDeps(root).value,                // No sources
       // moduleDeps(scalaDist).value,           // No sources
+      moduleDeps(scalacheck, config = Test).value,
       moduleDeps(scaladoc).value,
       moduleDeps(scalap).value,
-      moduleDeps(testP).value)
+      moduleDeps(testP).value,
+      moduleDeps(compilerOptionsExporter).value
+    )
   }
 
   def moduleDep(name: String, jars: Seq[File]) = {
-    val entries = jars.map(f => s"""        <root url="jar://${f.toURI.getRawPath}!/" />""").mkString("\n")
-    s"""|    <library name="${name}-deps">
+    val entries = jars.map(f => s"""        <root url="jar://${f.toURI.getPath}!/" />""").mkString("\n")
+    s"""|    <library name="$name-deps">
         |      <CLASSES>
         |$entries
         |      </CLASSES>
@@ -894,7 +1214,7 @@ intellij := {
   }
 
   def starrDep(jars: Seq[File]) = {
-    val entries = jars.map(f => s"""          <root url="file://${f.toURI.getRawPath}" />""").mkString("\n")
+    val entries = jars.map(f => s"""          <root url="file://${f.toURI.getPath}" />""").mkString("\n")
     s"""|    <library name="starr" type="Scala">
         |      <properties>
         |        <option name="languageLevel" value="Scala_2_12" />
@@ -933,65 +1253,85 @@ intellij := {
     r
   }
 
-  val ipr = (baseDirectory in ThisBuild).value / "src/intellij/scala.ipr"
-
-  var continue = false
+  val intellijDir = (baseDirectory in ThisBuild).value / "src/intellij"
+  val ipr = intellijDir / "scala.ipr"
+  backupIdea(intellijDir)
   if (!ipr.exists) {
-    scala.Console.print(s"Could not find src/intellij/scala.ipr. Create new project files from src/intellij/*.SAMPLE (y/N)? ")
-    if (scala.Console.readLine() == "y") {
-      intellijCreateFromSample((baseDirectory in ThisBuild).value)
-      continue = true
-    }
-  } else {
-    scala.Console.print("Update library classpaths in the current src/intellij/scala.ipr (y/N)? ")
-    continue = scala.Console.readLine() == "y"
+    intellijCreateFromSample((baseDirectory in ThisBuild).value)
   }
-  if (continue) {
-    s.log.info("Updating library classpaths in src/intellij/scala.ipr.")
-    val content = XML.loadFile(ipr)
+  s.log.info("Updating library classpaths in src/intellij/scala.ipr.")
+  val content = XML.loadFile(ipr)
 
-    val newStarr = replaceLibrary(content, "starr", Some("Scala"), starrDep((scalaInstance in LocalProject("compiler")).value.jars))
-    val newModules = modules.foldLeft(newStarr)({
-      case (res, (modName, jars)) =>
-        if (jars.isEmpty) res // modules without dependencies
-        else replaceLibrary(res, s"$modName-deps", None, moduleDep(modName, jars))
-    })
+  val newStarr = replaceLibrary(content, "starr", Some("Scala"), starrDep(compilerScalaInstance.allJars))
+  val newModules = modules.foldLeft(newStarr)({
+    case (res, (modName, jars)) =>
+      if (jars.isEmpty) res // modules without dependencies
+      else replaceLibrary(res, s"$modName-deps", None, moduleDep(modName, jars))
+  })
 
-    XML.save(ipr.getAbsolutePath, newModules)
-  } else {
-    s.log.info("Aborting.")
+  // I can't figure out how to keep the entity escapes for \n in the attribute values after this use of XML transform.
+  // Patching the original version back in with more brutish parsing.
+  val R = """(?ims)(.*)(<copyright>.*</copyright>)(.*)""".r
+  val oldContents = IO.read(ipr)
+  XML.save(ipr.getAbsolutePath, newModules)
+  oldContents match {
+    case R(_, withEscapes, _) =>
+      val newContents = IO.read(ipr)
+      val R(pre, toReplace, post) = newContents
+      IO.write(ipr, pre + withEscapes + post)
+    case _ =>
+      // .ipr file hasn't been updated from `intellijFromSample` yet
   }
 }
 
 lazy val intellijFromSample = taskKey[Unit]("Create fresh IntelliJ project files from src/intellij/*.SAMPLE.")
 
+def backupIdea(ideaDir: File): Unit = {
+  val temp = IO.createTemporaryDirectory
+  IO.copyDirectory(ideaDir, temp)
+  println(s"Backed up existing src/intellij to $temp")
+}
+
 intellijFromSample := {
   val s = streams.value
-  scala.Console.print(s"Create new project files from src/intellij/*.SAMPLE (y/N)? ")
-  if (scala.Console.readLine() == "y")
-    intellijCreateFromSample((baseDirectory in ThisBuild).value)
-  else
-    s.log.info("Aborting.")
+  val intellijDir = (baseDirectory in ThisBuild).value / "src/intellij"
+  val ipr = intellijDir / "scala.ipr"
+  backupIdea(intellijDir)
+  intellijCreateFromSample((baseDirectory in ThisBuild).value)
 }
 
 def intellijCreateFromSample(basedir: File): Unit = {
   val files = basedir / "src/intellij" * "*.SAMPLE"
   val copies = files.get.map(f => (f, new File(f.getAbsolutePath.stripSuffix(".SAMPLE"))))
-  IO.copy(copies, overwrite = true)
+  IO.copy(copies, CopyOptions() withOverwrite true)
 }
 
 lazy val intellijToSample = taskKey[Unit]("Update src/intellij/*.SAMPLE using the current IntelliJ project files.")
 
 intellijToSample := {
   val s = streams.value
-  scala.Console.print(s"Update src/intellij/*.SAMPLE using the current IntelliJ project files (y/N)? ")
-  if (scala.Console.readLine() == "y") {
-    val basedir = (baseDirectory in ThisBuild).value
-    val existing = basedir / "src/intellij" * "*.SAMPLE"
-    IO.delete(existing.get)
-    val current = basedir / "src/intellij" * ("*.iml" || "*.ipr")
-    val copies = current.get.map(f => (f, new File(f.getAbsolutePath + ".SAMPLE")))
-    IO.copy(copies)
-  } else
-    s.log.info("Aborting.")
+  val intellijDir = (baseDirectory in ThisBuild).value / "src/intellij"
+  val ipr = intellijDir / "scala.ipr"
+  backupIdea(intellijDir)
+  val existing =intellijDir * "*.SAMPLE"
+  IO.delete(existing.get)
+  val current = intellijDir * ("*.iml" || "*.ipr")
+  val copies = current.get.map(f => (f, new File(f.getAbsolutePath + ".SAMPLE")))
+  IO.copy(copies)
+}
+
+/** Find a specific module's JAR in a classpath, comparing only organization and name */
+def findJar(files: Seq[Attributed[File]], dep: ModuleID): Option[Attributed[File]] = {
+  def extract(m: ModuleID) = (m.organization, m.name)
+  files.find(_.get(moduleID.key).map(extract _) == Some(extract(dep)))
+}
+
+// WhiteSource
+whitesourceProduct               := "Lightbend Reactive Platform"
+whitesourceAggregateProjectName  := "scala-2.12-stable"
+whitesourceIgnoredScopes         := Vector("test", "scala-tool")
+
+{
+  scala.build.TravisOutput.installIfOnTravis()
+  Nil
 }
